added 2 titles, borders, changed some colors

--- a/frontend/src/pages/ECommerce/Sidebar.css
+++ b/frontend/src/pages/ECommerce/Sidebar.css
@@ -10,8 +10,10 @@
 
 .collection {
   height: auto;
+  border: 1px solid #ccacac;
 }
 
 .storeInfo {
   height: auto;
+  border: 1px solid #ccacac;
 }
