I have advanced on the CSS, and resolved some bugs

--- a/frontend/src/pages/ECommerce/Content.css
+++ b/frontend/src/pages/ECommerce/Content.css
@@ -1,9 +1,19 @@
 .content {
   width: 100%;
-  height: 90%;
+  height: 80%;
+  position: absolute;
+  top: 6.5%;
 }
 
 .sidebarProducts {
   display: flex;
-  flex-direction: row;
+  flex-direction: column-reverse;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px){
+  .sidebarProducts {
+    display: flex;
+    flex-direction: row;
+  }
 }
