--- a/frontend/src/pages/ECommerce/Banner.css
+++ b/frontend/src/pages/ECommerce/Banner.css
@@ -1,3 +1,4 @@
+
 .bannerImg {
   background-image: url("/src/assets/ecommerce/banner_white.jpg");
   background-size: cover;
@@ -10,8 +11,15 @@
 }
 
 .bannerImg > h1 {
-  font-size: 5em;
+  font-size: 2em;
   border: 0.3rem solid black;
-  padding: 0.2em;
-  margin: 2%;
+  padding: 0.3em;
+  margin: 10%;
+}
+
+@media screen and (min-width:768px) {
+  .bannerImg>h1{
+    font-size: 5em;
+    padding: 0.2em;
+  }
 }
