--- a/frontend/src/pages/ECommerce/ECommerce.css
+++ b/frontend/src/pages/ECommerce/ECommerce.css
@@ -1,5 +1,17 @@
 body {
   background-color: white;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+}
+
+.ecommerce{
+  display:flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  
+}
+
+.ecommerce>*{
+  box-sizing: border-box;
 }
