--- a/frontend/src/pages/ECommerce/Collection.css
+++ b/frontend/src/pages/ECommerce/Collection.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     height:100%;
+    gap: 10px;
 }
 
 .collectionContainer>.title_collection{
