--- a/frontend/src/pages/ECommerce/CurrentProduct.css
+++ b/frontend/src/pages/ECommerce/CurrentProduct.css
@@ -10,7 +10,10 @@
     background-size: cover; 
     height: 100px;
     width: 100%;
+    border-radius: 5px;
+    margin: 10px;
 }
+
 
 @media screen and (min-width: 768px){
     .currentProduct>.currentProductImg{
