--- a/frontend/src/pages/ECommerce/ECommerce.css
+++ b/frontend/src/pages/ECommerce/ECommerce.css
@@ -4,14 +4,14 @@ body {
   height: 100%;
 }
 
-.ecommerce{
-  display:flex;
+.ecommerce {
+  display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
-  
 }
 
-.ecommerce>*{
+.ecommerce > * {
   box-sizing: border-box;
+  overflow: scroll;
 }
