--- a/frontend/src/pages/ECommerce/CurrentProduct.css
+++ b/frontend/src/pages/ECommerce/CurrentProduct.css
@@ -11,13 +11,13 @@
     height: 100px;
     width: 100%;
     border-radius: 5px;
-    margin: 10px;
+    margin-top: 10px;
 }
 
 
 @media screen and (min-width: 768px){
     .currentProduct>.currentProductImg{
-        height: 200px;;
+        height: 200px;
         width: auto;
     }
 }
