--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -3,21 +3,10 @@
   padding: 0;
 }
 
-html {
-  height: 100%;
-  width: 100%;
-}
-
-body {
+html, body, #root, .App{
   height: 100%;
   width: 100%;
   margin: 0;
+  padding: 0;
 }
 
-#root {
-  height: 100%;
-}
-
-.App {
-  height: 100%;
-}
