--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -3,10 +3,12 @@
   padding: 0;
 }
 
-html, body, #root, .App{
+html,
+body,
+#root,
+.App {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
 }
-
