--- a/frontend/src/pages/ECommerce/Banner.css
+++ b/frontend/src/pages/ECommerce/Banner.css
@@ -1,4 +1,3 @@
-
 .bannerImg {
   background-image: url("/src/assets/ecommerce/banner_white.jpg");
   background-size: cover;
@@ -11,13 +10,14 @@
 
 .bannerImg > h1 {
   font-size: 2em;
-  border: 0.3rem solid black;
+  border: 0.3rem solid #565656;
   padding: 0.3em;
   margin: 10%;
+  color: #565656;
 }
 
-@media screen and (min-width:768px) {
-  .bannerImg>h1{
+@media screen and (min-width: 768px) {
+  .bannerImg > h1 {
     font-size: 5em;
     padding: 0.2em;
   }
