--- a/frontend/src/pages/ECommerce/Collection.css
+++ b/frontend/src/pages/ECommerce/Collection.css
@@ -1,25 +1,26 @@
-.collectionContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height:100%;
-    gap: 10px;
+.collectionContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  gap: 10px;
 }
 
-.collectionContainer>.title_collection{
-        font-size: 1em;
+.collectionContainer > .title_collection {
+  font-size: 1em;
+  color: #565656;
 }
 
-.collectionContainer>p{
-        font-size: 0.8em;
-        text-align: justify;
+.collectionContainer > p {
+  font-size: 0.8em;
+  text-align: justify;
+  color: #565656;
 }
-    
 
- @media screen and (min-width: 768px) {
-    .collectionContainer>p{
-        font-size: initial;
-    }
+@media screen and (min-width: 768px) {
+  .collectionContainer > p {
+    font-size: initial;
+  }
 }
