--- a/frontend/src/pages/ECommerce/CurrentProduct.css
+++ b/frontend/src/pages/ECommerce/CurrentProduct.css
@@ -1,23 +1,22 @@
-.currentProduct{
-    height: 100%;
+.currentProduct {
+  height: 100%;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.currentProduct > .currentProductImg {
+  background-image: url("/src/assets/ecommerce/bracelet.jpg");
+  background-size: cover;
+  height: 200px;
+  width: 100%;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .currentProduct > .currentProductImg {
+    height: 200px;
     width: auto;
-    display:flex;
-    flex-direction: column;
-}
-
-.currentProduct>.currentProductImg{
-    background-image: url('/src/assets/ecommerce/bracelet.jpg');
-    background-size: cover; 
-    height: 100px;
-    width: 100%;
-    border-radius: 5px;
-    margin-top: 10px;
-}
-
-
-@media screen and (min-width: 768px){
-    .currentProduct>.currentProductImg{
-        height: 200px;
-        width: auto;
-    }
+  }
 }
