--- a/frontend/src/pages/ECommerce/Sidebar.css
+++ b/frontend/src/pages/ECommerce/Sidebar.css
@@ -1,3 +1,4 @@
+
 .sidebar {
   width: 100%;
   height: auto;
@@ -8,13 +9,12 @@
 
 .sidebar > img {
   order: -1;
-  height:fit-content;
   width: 20%;
 }
 
 .collection{
   height: auto;
-  border: 2px solid #ccacac;
+  border: 2px solid lightgray;
   border-radius: 5px;
   width: 100%;
  padding-top: 10px;
@@ -23,7 +23,7 @@
 
 .storeInfo {
   height: auto;
-  border: 2px solid #ccacac;
+  border: 2px solid lightgray;
   border-radius: 5px;
   padding-top: 10px;
  padding-bottom: 10px;
@@ -38,6 +38,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    padding-right: 1%;
   }
   .sidebar > img {
     height: auto;
