--- a/frontend/src/pages/ECommerce/Collection.css
+++ b/frontend/src/pages/ECommerce/Collection.css
@@ -1,7 +1,7 @@
 .collectionContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -10,13 +10,18 @@
 
 .collectionContainer > .title_collection {
   font-size: 1em;
-  color: #565656;
+}
+
+.title_collection {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: #e6ae7c;
 }
 
 .collectionContainer > p {
   font-size: 0.8em;
   text-align: justify;
-  color: #565656;
 }
 
 @media screen and (min-width: 768px) {
