--- a/frontend/src/pages/ECommerce/Content.css
+++ b/frontend/src/pages/ECommerce/Content.css
@@ -1,19 +1,30 @@
 .content {
   width: 100%;
-  height: 85%;
+  height: 100%;
   position: absolute;
-  top: 6.5%;
+  top: 5.5%;
+}
+
+.banner {
+  height: 30%;
 }
 
 .sidebarProducts {
   display: flex;
   flex-direction: column-reverse;
-  width: 100%;
+  width: 98%;
+  margin: 1%;
 }
 
 @media screen and (min-width: 768px) {
   .sidebarProducts {
     display: flex;
     flex-direction: row;
+    width: 96%;
+    margin: 2%;
+  }
+
+  .banner {
+    height: 70%;
   }
 }
