--- a/frontend/src/pages/ECommerce/CurrentProduct.css
+++ b/frontend/src/pages/ECommerce/CurrentProduct.css
@@ -11,7 +11,7 @@
   height: 200px;
   width: 100%;
   border-radius: 5px;
-  margin-top: 10px;
+  border-radius: 5px 20px 5px 20px;
 }
 
 @media screen and (min-width: 768px) {
