--- a/frontend/src/pages/ECommerce/Header.css
+++ b/frontend/src/pages/ECommerce/Header.css
@@ -3,7 +3,8 @@
   top: 0;
   z-index: 1;
   width: 100%;
-  height: 10%;
+  height: 5%;
+  
 }
 
 .header > ul {
@@ -11,12 +12,12 @@
   flex-direction: row;
   list-style: none;
   gap: 1rem;
-  background-color: grey;
+  background-color: #e6ae7c;
   width: 100%;
 }
 
 li {
   padding: 1rem;
-  color: #565656;
-  background-color: lightgrey;
+  color: whitesmoke;
+  font-size: 25px;
 }
