--- a/frontend/src/pages/ECommerce/Sidebar.css
+++ b/frontend/src/pages/ECommerce/Sidebar.css
@@ -1,38 +1,38 @@
-
 .sidebar {
   width: 100%;
   height: auto;
   display: flex;
-  flex-direction: row;
- gap: 50px;
+  align-items: center;
+  flex-direction: column;
+  gap: 50px;
 }
 
 .sidebar > img {
-  order: -1;
-  width: 20%;
+  width: 40%;
+  display: none;
 }
 
-.collection{
+.collection {
   height: auto;
-  border: 2px solid lightgray;
+  border: 2px solid #e6ae7c;
   border-radius: 5px;
   width: 100%;
- padding-top: 10px;
- padding-bottom: 10px;
+  height: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .storeInfo {
   height: auto;
-  border: 2px solid lightgray;
+  border: 2px solid #e6ae7c;
   border-radius: 5px;
   padding-top: 10px;
- padding-bottom: 10px;
- text-align: center;
- padding: 10px;
-
+  padding-bottom: 10px;
+  text-align: center;
+  padding: 10px;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
   .sidebar {
     width: 15%;
     height: 100%;
@@ -43,5 +43,6 @@
   .sidebar > img {
     height: auto;
     width: 100%;
+    display: initial;
   }
 }
