--- a/frontend/src/pages/ECommerce/ECommerce.css
+++ b/frontend/src/pages/ECommerce/ECommerce.css
@@ -5,3 +5,284 @@
   font-family: 'Poiret One';
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 5%;
+  
+}
+
+.header > ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 1rem;
+  background-color: #e6ae7c;
+  width: 100%;
+}
+
+li {
+  padding: 1rem;
+  color: whitesmoke;
+  font-size: 25px;
+}
+
+
+.content {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 5.5%;
+}
+
+.banner {
+  height: 30%;
+}
+
+.sidebarProducts {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 98%;
+  margin: 1%;
+}
+
+.bannerImg {
+  background-image: url("/src/assets/ecommerce/banner_white.jpg");
+  background-size: cover;
+  height: 100%;
+  width: 98%;
+  margin: 1%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  border-radius: 5px 20px 5px 20px;
+}
+
+.bannerContainer {
+  height: 100%;
+}
+
+.bannerImg > h1 {
+  font-size: 2.5em;
+  border: 0.3rem solid #e6ae7c;
+  padding: 0.3em;
+  color: #e6ae7c;
+  margin-bottom: 5%;
+
+}
+
+.sidebar {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.sidebar > img {
+  width: 40%;
+  display: none;
+}
+
+.collection {
+  height: auto;
+  border: 2px solid #e6ae7c;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.storeInfo {
+  height: auto;
+  border: 2px solid #e6ae7c;
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  padding: 10px;
+}
+
+.collectionContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  gap: 10px;
+}
+
+.collectionContainer > .title_collection {
+  font-size: 1em;
+}
+
+.title_collection {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: #e6ae7c;
+}
+
+.collectionContainer > p {
+  font-size: 0.8em;
+  text-align: justify;
+}
+
+.storeInfoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
+.storeInfoContainer > p {
+  font-size: 0.8em;
+  text-align: justify;
+}
+
+.title_store_info {
+  font-size: 1em;
+  margin-bottom: 10px;
+  
+
+}
+
+.titleProduct {
+  margin-bottom: 10px;;
+  text-align: center;
+  background-color: #e6ae7c;
+  border-radius: 5px;
+  color: whitesmoke;
+  font-size: 25px;
+  padding: 2%;
+  width: 96%;;
+}
+
+.currentProduct {
+  height: 100%;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.currentProduct > .currentProductImg {
+  background-image: url("/src/assets/ecommerce/bracelet.jpg");
+  background-size: cover;
+  height: 200px;
+  width: 100%;
+  border-radius: 5px;
+  border-radius: 5px 20px 5px 20px;
+}
+
+.products {
+  width: 100%;
+  height: 200%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+
+.productList > * {
+  width: 100%;
+}
+.productListItem {
+  display: flex;
+  flex-direction: row;
+  overflow: scroll;
+  height: 150%;
+}
+
+.productList {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.titleProduct {
+  margin-bottom: 10px;;
+  text-align: center;
+  background-color: #e6ae7c;
+  border-radius: 5px;
+  color: whitesmoke;
+  font-size: 25px;
+  padding: 2%;
+  width: 96%;;
+}
+
+.footer>ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+  gap: 1rem;
+  background-color: #e6ae7c;
+  width: 100%;
+}
+
+.footer>p{
+  height: 100%;
+}
+li{
+  color: whitesmoke;
+  font-size: 25px;
+  
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 768px) {
+  .sidebarProducts {
+    display: flex;
+    flex-direction: row;
+    width: 96%;
+    margin: 2%;
+  }
+
+  .banner {
+    height: 70%;
+  }
+
+  .bannerImg > h1 {
+    font-size: 5em;
+    padding: 0.2em;
+    margin-bottom: 2%;
+  }
+
+  .sidebar {
+    width: 15%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-right: 1%;
+  }
+  .sidebar > img {
+    height: auto;
+    width: 100%;
+    display: initial;
+  }
+
+  .collectionContainer > p, .storeInfoContainer > p  {
+    font-size: initial;
+  }
+
+  .products {
+    width: 85%;
+  }
+
+  .currentProduct > .currentProductImg {
+    height: 200px;
+    width: auto;
+  }
+
+  .products {
+    width: 85%;
+  }
+}
