--- a/frontend/src/pages/ECommerce/ECommerce.css
+++ b/frontend/src/pages/ECommerce/ECommerce.css
@@ -1,8 +1,7 @@
-
 .ecommerce {
   width: 100%;
-  height:100%;
-  font-family: 'Poiret One';
+  height: 100%;
+  font-family: "Poiret One";
 }
 
 .header {
@@ -11,7 +10,6 @@
   z-index: 1;
   width: 100%;
   height: 5%;
-  
 }
 
 .header > ul {
@@ -28,7 +26,6 @@ li {
   color: whitesmoke;
   font-size: 25px;
 }
-
 
 .content {
   width: 100%;
@@ -70,7 +67,6 @@ li {
   padding: 0.3em;
   color: #e6ae7c;
   margin-bottom: 5%;
-
 }
 
 .sidebar {
@@ -149,19 +145,17 @@ li {
 .title_store_info {
   font-size: 1em;
   margin-bottom: 10px;
-  
-
 }
 
 .titleProduct {
-  margin-bottom: 10px;;
+  margin-bottom: 10px;
   text-align: center;
   background-color: #e6ae7c;
   border-radius: 5px;
   color: whitesmoke;
   font-size: 25px;
   padding: 2%;
-  width: 96%;;
+  width: 96%;
 }
 
 .currentProduct {
@@ -207,17 +201,17 @@ li {
 }
 
 .titleProduct {
-  margin-bottom: 10px;;
+  margin-bottom: 10px;
   text-align: center;
   background-color: #e6ae7c;
   border-radius: 5px;
   color: whitesmoke;
   font-size: 25px;
   padding: 2%;
-  width: 96%;;
+  width: 96%;
 }
 
-.footer>ul{
+.footer > ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -227,13 +221,12 @@ li {
   width: 100%;
 }
 
-.footer>p{
+.footer > p {
   height: 100%;
 }
-li{
+li {
   color: whitesmoke;
   font-size: 25px;
-  
 }
 
 /* Media Queries */
@@ -269,7 +262,8 @@ li{
     display: initial;
   }
 
-  .collectionContainer > p, .storeInfoContainer > p  {
+  .collectionContainer > p,
+  .storeInfoContainer > p {
     font-size: initial;
   }
 
