--- a/frontend/src/pages/ECommerce/Product.css
+++ b/frontend/src/pages/ECommerce/Product.css
@@ -17,12 +17,12 @@
   opacity: 0.7;
 }
 
-.product{
+.product {
   padding: 1%;
-  border-radius: 5%;;
+  border-radius: 5%;
 }
 
-.product >h3{
+.product > h3 {
   color: #565656;
 }
 
