--- a/frontend/src/pages/Restaurant/Restaurant.css
+++ b/frontend/src/pages/Restaurant/Restaurant.css
@@ -1,7 +1,7 @@
 /*ALL*/
 
 #page {
-  background-color: rgb(230, 230, 230);
+  /* background-color: rgb(230, 230, 230);*/
   font-family: "Fjalla One", sans-serif;
   min-width: 364px;
 }
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(255, 255, 255);
+  /*background-color: rgb(255, 255, 255);*/
 }
 
 #topBar p {
@@ -51,7 +51,7 @@
 #buttonAdd {
   height: 60%;
   width: 55px;
-  background-color: rgb(148, 148, 148);
+  /*background-color: rgb(148, 148, 148);*/
   border: none;
   border-radius: 10px;
 }
@@ -203,7 +203,7 @@
 }
 
 .itemDetails {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .textTop h6 {
