Palette/ palette page resto

--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -13,3 +13,10 @@ body,
   margin: 0;
   padding: 0;
 }
+
+.colorBox {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: black;
+}
