--- a/frontend/src/components/PaletteTop.css
+++ b/frontend/src/components/PaletteTop.css
@@ -1,6 +1,31 @@
+.boxContainer {
+  width: 95%;
+  padding: 5px;
+  height: 125px;
+}
+
 .colorBox {
-  height: 12vh;
-  width: 12vh;
+  height: 60px;
+  width: 60px;
   border-radius: 50%;
   background-color: black;
+}
+
+.textPalette {
+  font-size: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .boxContainer {
+    width: 730px;
+    padding: 20px;
+    height: 200px;
+  }
+  .colorBox {
+    height: 100px;
+    width: 100px;
+  }
+  .textPalette {
+    font-size: 16px;
+  }
 }
