changing startup to include colors

--- a/frontend/src/pages/Startup/Startup.css
+++ b/frontend/src/pages/Startup/Startup.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: var(--text-font);
-  background-color: var(--dark-color);
+  /* background-color: var(--dark-color); */
   line-height: 1.5;
   font-size: 1rem;
   font-weight: 20;
@@ -26,7 +26,6 @@ body {
 }
 
 .nav-container {
-  background-color: #1a083a;
   display: flex;
   flex-direction: column;
 }
@@ -73,7 +72,6 @@ body {
   font-size: 35px;
   font-style: normal;
   line-height: 50px;
-  background-color: #1a083a;
   color: white;
   padding-top: 10%;
 }
@@ -91,8 +89,7 @@ body {
   font-size: 20px;
   font-style: normal;
   line-height: 32px;
-  background-color: #1a083a;
-  color: white;
+  color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
