--- a/frontend/src/pages/Startup/Startup.css
+++ b/frontend/src/pages/Startup/Startup.css
@@ -79,11 +79,15 @@ body {
 }
 
 .buttonFirstContainer {
-  width: 100px;
-  padding: 40px 20px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 10rem;
+  padding: 40px 1px;
   box-shadow: none;
   border-radius: 8px;
   border: none;
+  gap: 1x;
   background-color: white;
 }
 
@@ -103,17 +107,13 @@ body {
   padding: 20px;
 }
 
-.devis {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-style: normal;
-  line-height: 32px;
-  color: white;
-  padding-bottom: 5%;
-  border-bottom: 1px solid;
-  padding-top: 5%;
+.buttonSecondContainer {
+  width: 100px;
+  padding: 40px 20px 0;
+  box-shadow: none;
+  border-radius: 8px;
+  border: none;
+  background-color: white;
 }
 
 .thirdContainer {
@@ -129,7 +129,7 @@ body {
   padding-bottom: 5%;
 }
 
-.thirdContainer h8 {
+.thirdContainer h3 {
   display: block;
 }
 
@@ -137,7 +137,7 @@ body {
   width: 600px;
 }
 
-.underThird > h8 {
+.underThird > h3 {
   font-size: 45px;
   margin: 20px 0 35px;
 }
@@ -150,7 +150,7 @@ body {
   width: 600px;
 }
 
-.underThird2 > h8 {
+.underThird2 > h3 {
   font-size: 25px;
   border-bottom: 1px solid rgb(255, 255, 255);
   padding-bottom: 15px;
@@ -178,7 +178,7 @@ body {
   padding-bottom: 5%;
 }
 
-.fourthContainer h9 {
+.fourthContainer h3 {
   display: block;
 }
 
@@ -201,7 +201,7 @@ body {
   padding-top: 5%;
 }
 
-.underFourth > h9 {
+.underFourth > h3 {
   font-size: 45px;
   margin: 20px 0 35px;
 }
@@ -210,7 +210,7 @@ body {
   font-size: 16px;
 }
 
-.underFourth2 > h9 {
+.underFourth2 > h3 {
   font-size: 25px;
   padding-bottom: 35px;
 }
@@ -229,7 +229,7 @@ body {
   padding-top: 5%;
 }
 
-.fifthContainer h10 {
+.fifthContainer h3 {
   font-size: 25px;
   line-height: 32px;
   color: white;
@@ -252,7 +252,7 @@ body {
   border-top: 1px solid;
 }
 
-.sixthContainer h11 {
+.sixthContainer h3 {
   display: flex;
   justify-content: center;
   font-size: 35px;
@@ -274,7 +274,7 @@ body {
   padding-top: 5%;
 }
 
-.seventhContainer h12 {
+.seventhContainer h3 {
   margin-bottom: 40px;
 }
 
