--- a/frontend/src/pages/Startup/Startup.css
+++ b/frontend/src/pages/Startup/Startup.css
@@ -1,45 +1,55 @@
+:root {
+  --grayTransparent: rgba(255, 255, 255, 0.7);
+  --gray: rgb(163, 163, 163);
+}
+
+.startupPage {
+  font-family: "Roboto";
+  font-weight: 400;
+  letter-spacing: 0.4px;
+}
+
 body {
   margin: 0;
-  font-family: var(--text-font);
-
-  background-color: var(#0053f1);
-
-  /* background-color: var(--dark-color); */
-
   line-height: 1.5;
   font-size: 1rem;
-  font-weight: 20;
+}
+
+h2 {
+  font-size: 3rem;
 }
 
 #logo {
+  font-family: "Righteous";
   text-decoration: none;
   align-items: center;
   color: white;
-  font-weight: 50;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
-#barNav {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+#headerInnerDiv {
+  width: 85%;
+  margin: 0 auto;
+  color: white;
+}
+
+#navBar {
   line-height: 1.5;
   display: flex;
   justify-content: space-between;
-  color: white;
-  width: 100%;
+  height: 65px;
+  align-items: center;
+  margin: 0 auto;
   border-bottom: 1px solid;
-}
-
-.nav-container {
-  background-color: #0053f1;
-
-  display: flex;
-  flex-direction: column;
+  color: white;
+  font-weight: 400;
 }
 
 #navBarLeftUl {
-  justify-content: space-around;
+  justify-content: space-between;
   min-width: 400px;
   width: 400px;
+  margin-left: 40px;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -50,10 +60,9 @@ body {
   justify-content: flex-end;
   width: 400px;
   min-width: 400px;
-  gap: 5px;
+  gap: 15px;
   display: flex;
   align-items: center;
-  flex-direction: row;
   width: 100%;
   list-style: none;
 }
@@ -63,40 +72,57 @@ body {
   box-shadow: none;
   border-radius: 8px;
   border: none;
+  font-size: 1rem;
+  font-family: "Roboto";
 }
 
-.firstContainer {
-  font-size: 20px;
-  font-style: normal;
-  line-height: 32px;
-  background-color: #0053f1;
-  color: white;
-  padding-bottom: 5%;
-}
-
-.firstContainer h1 {
-  font-size: 35px;
-  font-style: normal;
-  line-height: 50px;
-
-  background-color: #0053f1;
-
-  color: white;
-  padding-top: 5%;
-}
-
-.buttonFirstContainer {
+.startupHeader {
   display: flex;
-  align-items: center;
+  margin-top: 5.5rem;
+}
+
+.startupHeader h2 {
+  font-size: 3rem;
+  font-weight: 450;
+  font-style: normal;
+  line-height: 4rem;
+  color: white;
+  margin: 0 0 20px 0;
+}
+
+header p {
+  font-size: 1.1rem;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.9rem;
+  width: 100%;
+  margin-bottom: 5.5rem;
+}
+
+#headerButtonContainer {
+  display: flex;
+  gap: 8px;
+}
+
+.headerButton {
+  display: flex;
   flex-direction: column;
-  width: 12rem;
-  margin: 3px;
-  padding: 40px 1px;
+  justify-content: center;
+  align-items: center;
   box-shadow: none;
   border-radius: 8px;
   border: none;
-  gap: 1x;
   background-color: white;
+  width: 100%;
+  font-size: 1rem;
+  height: 105px;
+  gap: 8px;
+}
+
+.startupHeader > div:nth-child(2) {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .secondContainer {
@@ -112,153 +138,116 @@ body {
   padding-bottom: 3%;
 }
 
-.secondContainer h3 {
-  font-size: 35px;
-  padding: 20px;
-  margin-bottom: 2%;
-}
-
-.buttonSecondContainer {
+#googleReview {
+  font-family: Open sans;
   display: flex;
   align-items: center;
-  flex-direction: column;
-  font-size: 20px;
-  width: 20rem;
-  margin: 3px;
-  padding: 50px 1px;
-  box-shadow: none;
-  border-radius: 8px;
-  border: none;
+  gap: 10px;
+  margin: 1rem 0 5rem 0;
+}
+#googleReview span {
+  font-size: 0.7rem;
+  font-weight: light;
+  font-family: Roboto;
+}
+#googleReview div {
+  display: flex;
+  align-items: center;
 }
 
-.thirdContainer {
-  width: 100%;
-  display: block;
-  background-color: #30386b;
-  flex-direction: row;
-  font-size: 20px;
-  font-style: normal;
-  line-height: 32px;
-  color: white;
-}
-
-.fourthContainer {
-  font-size: 20px;
-  font-style: normal;
-  color: black;
-}
-
-.fourthContainer2 {
-  font-size: 20px;
-  font-style: normal;
-  color: black;
-  padding-top: 1%;
-}
-
-.prix {
+#newsBanners {
   display: flex;
   justify-content: center;
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
-/* border fourth container*/
-
-.borderLeft {
-  padding-left: 40px;
   margin-top: 30px;
-}
-
-.fifthContainer {
-  font-size: 20px;
-  font-style: normal;
-  line-height: 32px;
-  color: white;
   border-top: 1px solid;
-  padding-top: 5%;
+  height: 90px;
+  align-items: center;
 }
 
-.fifthContainer h3 {
-  font-size: 25px;
-  line-height: 32px;
-  color: white;
+#newsBanners div {
+  background-color: var(--grayTransparent);
+  width: 300px;
+  height: 55px;
 }
 
-.avisClients {
-  display: flex;
-  justify-content: left;
-  padding-top: 5%;
-  padding-bottom: 5%;
+#newsBanners div:first-child {
+  -webkit-mask: url("../../assets/startup/news/NewYorkTimes.svg") no-repeat
+    center;
+  mask: url("../../assets/startup/news/NewYorkTimes.svg") no-repeat center;
+  width: 300px;
+  margin-right: 63px;
+}
+#newsBanners div:nth-child(2) {
+  -webkit-mask: url("../../assets/startup/news/Obs.svg") no-repeat center;
+  mask: url("../../assets/startup/news/Obs.svg") no-repeat center;
+  width: 150px;
+  margin-right: 63px;
 }
 
-.sixthContainer {
-  font-size: 20px;
-  font-style: normal;
-  line-height: 32px;
-  color: white;
-  padding-bottom: 5%;
-  padding-top: 5%;
-  border-top: 1px solid;
+#newsBanners div:nth-child(3) {
+  -webkit-mask: url("../../assets/startup/news/lemonde.svg") no-repeat center;
+  mask: url("../../assets/startup/news/lemonde.svg") no-repeat center;
 }
 
-.sixthContainer h3 {
+#cellphoneImageContainer {
+  max-height: 400px;
   display: flex;
   justify-content: center;
-  font-size: 35px;
+  align-items: center;
+}
+#cellphoneImageContainer img {
+  max-height: 450px;
 }
 
-.underSixth2 {
+/* SECOND CONTAINER */
+
+#secondContainer {
+  margin: 5.5rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#secondContainerInnerDiv {
   display: flex;
   justify-content: center;
-  margin: 50px;
-  gap: 5px;
+  margin-bottom: 3rem;
 }
 
-.seventhContainer {
-  font-size: 16px;
-  font-style: normal;
-  line-height: 32px;
-  color: white;
-  border-top: 1px solid;
-  padding-top: 5%;
-}
-
-.seventhContainer h3 {
-  margin-bottom: 40px;
-}
-
-.underSeventh {
+#computerImgContainer {
+  width: 40%;
   display: flex;
-  justify-content: center;
+  align-items: center;
+}
+#computerImgContainer img {
+  max-width: 100%;
 }
 
-.underSeventh2 {
+#secondContainerTextContainer {
+  width: 32%;
+}
+
+#secondContainerTextContainer h2 {
+  font-weight: 300;
+}
+
+#secondContainerTextContainer > div {
+  margin: 2rem 0;
+  color: var(--gray);
+  padding-left: 1.5rem;
   display: flex;
-  padding-top: 5%;
+  flex-direction: column;
+  border-left: 3px solid;
 }
-
-.buttonHeader {
-  font-size: 20px;
-  height: 100px;
-  box-shadow: none;
-  border-radius: 8px;
-  border: none;
-  gap: 8px;
+#secondContainerTextContainer > div:nth-child(2) {
+  color: black;
 }
-
-button {
+#secondContainer > button {
+  font-size: 1.05rem;
   background-color: white;
-}
-
-#buttonsContainer {
-  width: 100%;
-}
-
-@media screen and (min-width: 400px) {
-  #barNav {
-    justify-content: flex-start;
-  }
-
-  #navBarLeftUl {
-    margin-right: auto;
-  }
+  border: 2px solid;
+  display: flex;
+  gap: 5px;
+  padding: 12.5px 20px;
+  align-items: center;
+  font-weight: 500;
 }
